CRUD de estaciones, cambios a tipo de estaciones, y mas